--- a/MythBots/src/app/components/paths/login/login.component.scss
+++ b/MythBots/src/app/components/paths/login/login.component.scss
@@ -9,15 +9,16 @@ input.ng-dirty.ng-invalid{
 .container {
     background-image: linear-gradient(to right, $color-primary-1, $color-primary-5);
     display: flex;
+    width: 100%;
     align-items: center;
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    max-width: 100%;
+    min-width: 100%;
 }
 
 .login-container {
-    width: 70%; 
+    width: 0%; 
     float: left;
     height: 0;
     border-bottom: 800px solid $color-primary-5;
@@ -86,6 +87,8 @@ h1{
 }
 
 .description {
+    display: flex;
+    width: 100%;
     color: white;
     font-size: $font-body-size;
     font-family: $font-family-primary;
