Correciones e implementacion de observable, navbar y footer ya no se muestran amenos que se este logeado, asimismo, si el usuario hace logout estos dejan de mostrarse y se redirecciona a la página de login

--- a/MythBots/src/app/components/layout/navbar/navbar.component.html
+++ b/MythBots/src/app/components/layout/navbar/navbar.component.html
@@ -16,6 +16,9 @@
         </div>
 
         <!-- Icono de cuenta de usuario -->
+        <a class="navbar-item__link" [routerLink]="['/login']" (click)="logout()">
+            <span class="navbar-item__text">Logout</span>
+        </a>
         <div class="navbar-account"></div>
 
         <!-- Icono de hamburguesa para dispositivos pequeños -->
