--- a/MythBots/src/app/app.component.html
+++ b/MythBots/src/app/app.component.html
@@ -1,5 +1,9 @@
-<app-navbar></app-navbar>
+@if (isLogged) {
+  <app-navbar></app-navbar>
+}
 <main>
   <router-outlet></router-outlet>
 </main>
-<app-footer></app-footer>
+@if (isLogged) {
+  <app-footer></app-footer>
+}
