--- a/MythBots/src/app/components/layout/navbar/navbar.component.scss
+++ b/MythBots/src/app/components/layout/navbar/navbar.component.scss
@@ -91,6 +91,7 @@
 .navbar-account {
     width: 62px;
     height: 62px;
+    cursor: pointer;
     border-radius: 100px;
     background: url('https://via.placeholder.com/62') lightgray 50% / cover no-repeat;
 }
