--- a/MythBots/src/app/components/paths/home/home.component.scss
+++ b/MythBots/src/app/components/paths/home/home.component.scss
@@ -4,11 +4,12 @@
 .base-plantilla {
     min-width: 100%;
     min-height: 100vh;
-    background: $background-gradient;
+    background: $color-primary-3;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     overflow-y: auto;
 
     .seccion {
+        background: $background-gradient;
         display: flex;
         width: calc(100% - 50px);
         margin: 60px auto;
