Ajustes en "card-cuenta"

--- a/MythBots/src/app/components/layout/card-cuenta/card-cuenta.component.scss
+++ b/MythBots/src/app/components/layout/card-cuenta/card-cuenta.component.scss
@@ -78,12 +78,13 @@
         gap: 8px;
 
         // Elementos de cada opción
-        .element {
+        .element-link {
             display: flex;
             align-items: center;
             gap: 10px;
             padding: 12px 8px;
             border-radius: 6px;
+            text-decoration: none;
             cursor: pointer;
             color: $color-gray-6;
             transition: all 0.3s ease-out;
