--- a/MythBots/src/app/components/paths/home/home.component.scss
+++ b/MythBots/src/app/components/paths/home/home.component.scss
@@ -45,7 +45,7 @@
 
                 .impar-imagen {
                     width: 35%;
-                    height: 300px;
+                    height: auto;
                     display: flex;
                     justify-content: center;
                     align-items: center;
@@ -88,7 +88,7 @@
 
                 .par-imagen {
                     width: 35%;
-                    height: 300px;
+                    height: auto;
                     display: flex;
                     justify-content: center;
                     align-items: center;
