--- a/MythBots/src/app/components/paths/create-funko/customize-funko/customize-funko.component.scss
+++ b/MythBots/src/app/components/paths/create-funko/customize-funko/customize-funko.component.scss
@@ -1,3 +1,6 @@
+@import '../../../../../variables';
+@import '../../../../../global-styles';
+
 .customize-funko-page {
     display: flex;
     flex-direction: column;
